<resources>
    <string name="app_name">DaggerDemo</string>

    <string name="main_scan">扫一扫</string>
    <string name="main_message">消息</string>
    <string name="main_search_text">购物狂欢节，等你来战</string>

    <string name="main_cart">购物车</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_name_hint">账号/邮箱/手机号码</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login_register">注册账号</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login_btn">登录</string>
    <string name="login_remember_me">记住我</string>

</resources>
